fixes spacing on menu icon

--- a/web/src/components/header.module.css
+++ b/web/src/components/header.module.css
@@ -6,6 +6,7 @@
   font-size: 16px;
   width: 100%;
   padding-bottom: 2em;
+  justify-content: space-between;
   @media (min-width: 450px) {
     font-size: 20px;
   }
